tests/compile_tests/missing_discriminant.stderr
error: missing discriminant value
 --> $DIR/missing_discriminant.rs:7:19
  |
7 |     NoDiscriminant,
  |                   ^
